tests/en/errors/empty_interface.salam
// EXPECT: E058
interface Empty:
end
func main: println ("x") end
